fix: sponsor boxes & overflow: auto

--- a/style.css
+++ b/style.css
@@ -282,6 +282,8 @@ section:nth-of-type(4) {
 
 .logo-bigBoxes {
   width: calc(100% / 2);
+  height: calc(100vw / 3);
+  overflow: auto;
 }
 
 .logo-bigBoxes:nth-of-type(2) {
